--- a/src/components/home.astro
+++ b/src/components/home.astro
@@ -16,12 +16,11 @@ import SkillsList from "../React/SkillsList.tsx";
         <h1
           class="text-[var(--white)] text-5xl md:text-6xl font-medium text-pretty leading-none"
         >
-          Software <br /> Developer
+          Backend <br /> Developer
         </h1>
         <p class="text-md md:text-2xl text-[var(--white-icon)]">
-          Transforming ideas into interactive and seamless digital experiences
-          with cutting-edge <span class="text-[var(--sec)] shiny-sec"
-            >frontend</span
+          Transformando ideas en experiencias digitales interactivas y fluidas con tecnología de vanguardia. <span class="text-[var(--sec)] shiny-sec"
+            >backend</span
           > development.
         </p>
       </div>
