--- a/src/components/home.astro
+++ b/src/components/home.astro
@@ -61,7 +61,7 @@ import SkillsList from "../React/SkillsList.tsx";
         </a>
         <a
           target="_blank"
-          href="https://mail.google.com/mail/?view=cm&fs=1&to=leniyanacon@gmail.com&su=Hey%20Oscar!"
+          href="https://mail.google.com/mail/?view=cm&fs=1&to=leniyanacon@gmail.com&su=Hola%20Leni!"
           aria-label="Email"
           class="text-[var(--white-icon)] hover:text-white transition duration-300 ease-in-out border border-1 border-[var(--white-icon-tr)] p-3 rounded-xl bg-[#1414149c] hover:bg-[var(--white-icon-tr)]"
         >
